<resources>
    <string name="app_name">Ymdhms</string>
    <string name="action_settings">Settings</string>

    <string name="ymd_opt_key">ymd_opt_key</string>
    <string name="ymd_opt_label">Select format for Date:</string>
    <string name="ymd_opt_dash_mmm">Friday, 15-Aug-1947</string>
    <string name="ymd_opt_dash_mm">Friday, 15-08-1947</string>
    <string name="ymd_opt_mdy">Friday, 08/15/1947</string>
    <string name="ymd_opt_mmmm">Friday, August 15</string>

    <string name="hms_opt_key">hms_opt_key</string>
    <string name="hms_opt_label">Select format for Time:</string>
    <string name="hms_opt_12hr">10:20 PM</string>
    <string name="hms_opt_24hr">22:20</string>

</resources>
