<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hms_opt_label"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/hms_opt_radiogroup">
    <RadioButton android:id="@+id/hms_opt_12hr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/hms_opt_12hr"/>
    <RadioButton android:id="@+id/hms_opt_24hr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/hms_opt_24hr"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ymd_opt_label"/>
    <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/ymd_opt_radiogroup">
        <RadioButton android:id="@+id/ymd_opt_dash_mmm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/ymd_opt_dash_mmm"/>
        <RadioButton android:id="@+id/ymd_opt_dash_mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/ymd_opt_dash_mm"/>
        <RadioButton android:id="@+id/ymd_opt_mmmm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/ymd_opt_mmmm"/>
        <RadioButton android:id="@+id/ymd_opt_mdy"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/ymd_opt_mdy"/>
    </RadioGroup>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apply"/>

</LinearLayout>